:sparkles: Book crud
