# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\BookController;
 use App\Http\Controllers\StoreController;
 use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
@@ -12,6 +13,9 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::delete('logout', [AuthController::class, 'logOut']);
 
     Route::resource('stores', StoreController::class)
+        ->only('index','store', 'show', 'update', 'destroy');
+
+    Route::resource('books', BookController::class)
         ->only('index','store', 'show', 'update', 'destroy');
 });
 
